# beatled

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.arm64  Gemfile  IDEAS.md  README.md  _config.yml  beatled.sh  pi@raspberrypiz.local  test_restinio.cpp
.github/: dependabot.yml
controller/esp32/main/: CMakeLists.txt
controller/tests/posix/alarm/: CMakeLists.txt
controller/tests/posix/patterns/: CMakeLists.txt  test_patterns.cpp
server/: .clang-format  CMakeLists.txt  CMakePresets-old.json  CMakePresets.json  build-docker.sh  build.sh  if_test.cpp  main.cpp  rpiz-toolchain.cmake  test_restinio.cpp  toolchain-arm.cmake  vcpkg.json
server/beat/: CMakeLists.txt  beat_worker.cpp
server/cmake/: arm64-linux-custom.cmake  arm64-linux-dynamic.cmake  docker-toolchain.cmake  rpiz-toolchain.cmake
server/docs/: CMakeLists.txt  Doxyfile.in  README.md  extensions.md  main_page.xx.old
server/http/: CMakeLists.txt  server_handler.cpp  server_handler.h
server/lib/: CMakeLists.txt
server/lib/clara/: CMakeLists.txt
server/lib/json/: CMakeLists.txt
server/src/: CMakeLists.txt  application.cpp  application.hpp  audio_beat.cpp  beatled_cli.cpp  beatled_server.cpp  build_constants.h.in  config.h  config.hpp  generate_build_constants.cmake  hello_world_fftw.cpp  hello_world_portaudio.cpp  main.cpp
server/src/beat/: beat_worker.cpp  udp_server.cpp  udp_server.h
server/src/beat_detector/: CMakeLists.txt  audio_buffer.hpp  audio_buffer_pool.hpp  audio_exception.hpp  audio_input.cpp  audio_input.hpp  audio_output.cpp  audio_output.hpp  audio_player.cpp  audio_player.hpp  audio_recorder.cpp  audio_recorder.hpp  beat_detector.cpp  beat_detector.hpp  beat_detector_impl.h  beat_worker.cpp  portaudio_handler.hpp
server/src/beat_detector/audio/: audio_buffer.hpp  audio_buffer_pool.hpp  audio_exception.hpp  audio_input.cpp  audio_input.hpp  audio_interface.cpp  audio_interface.hpp  audio_output.cpp  audio_output.hpp  audio_player.cpp  audio_recorder.cpp  portaudio_handler.hpp
server/src/beat_detector/include/beat_detector/: beat_detector.hpp
server/src/beat_detector/include/beat_detector/audio/: audio_player.hpp  audio_recorder.hpp  config.h
server/src/commands/: play.hpp  record.hpp  track.hpp  track_next_beat.hpp
server/src/config/: CMakeLists.txt  config.cpp
server/src/config/include/config/: config.hpp
server/src/core/: CMakeLists.txt  client_status.cpp  config.cpp  realtime.cpp  state_manager.cpp
server/src/core/include/core/: client_status.hpp  clock.hpp  config.hpp  realtime.hpp  state_manager.hpp
server/src/core/include/core/interfaces/: service_controller.hpp  service_manager.hpp
server/src/http/: CMakeLists.txt  file_extensions.h  server_handler.cpp
server/src/protocol/: constants.h
server/src/server/: CMakeLists.txt  server.cpp  server.h  server.hpp  server_parameters.h  server_parameters.hpp
server/src/server/http/: CMakeLists.txt  api_handler.cpp  api_handler.hpp  file_extensions.hpp  file_handler.cpp  file_handler.hpp  http_server.cpp  http_server.h  http_server.hpp  response_handler.cpp  response_handler.hpp  server_handler.hpp  server_parameters.h  utils.hpp
server/src/server/http/include/http_server/: http_server.hpp  server_parameters.hpp
server/src/server/include/server/: server.hpp  server_parameters.hpp
server/src/server/logger/: CMakeLists.txt  logger.cpp  logger.hpp  ring_buffer_sink.cpp
server/src/server/logger/include/logger/: logger.hpp  logger_parameters.hpp
server/src/server/manual_tempo/: CMakeLists.txt  manual_tempo.cpp
server/src/server/manual_tempo/include/manual_tempo/: manual_tempo.hpp
server/src/server/tcp_server/: CMakeLists.txt  tcp_server.cpp  tcp_session.cpp
server/src/server/tcp_server/include/tcp_server/: tcp_server.hpp  tcp_session.hpp
server/src/server/tempo_broadcaster/: CMakeLists.txt  broadcast_loop.cpp  broadcast_loop.hpp  server_parameters.hpp  tempo_broadcaster.cpp  tempo_broadcaster.hpp
server/src/server/tempo_broadcaster/include/tempo_broadcaster/: broadcast_loop.hpp  tempo_broadcaster.hpp
server/src/server/udp/: CMakeLists.txt  beat_worker.cpp  beat_worker.h  server_parameters.h  udp_buffer.cpp  udp_buffer.hpp  udp_request_handler.cpp  udp_request_handler.hpp  udp_response_buffer.cpp  udp_server.cpp  udp_server.h  udp_server.hpp
server/src/server/udp/include/udp/: udp_buffer.hpp
server/src/server/udp_server/: CMakeLists.txt  udp_request_handler.cpp  udp_request_handler.hpp  udp_server.cpp  udp_server.hpp
server/src/server/udp_server/include/udp_server/: server_parameters.hpp  udp_server.hpp
server/src/state_manager/: CMakeLists.txt  client_status.cpp  state_machine.cpp  state_machine.h  state_manager.cpp  state_manager.hpp
server/src/state_manager/include/state_manager/: client_status.hpp  clock.hpp  state_manager.hpp
server/tests/: CMakeLists.txt  _kiss_fft_guts.h  async_udp_echo_server.cpp  test-tempo.c  test_audio_buffer_pool.cpp  test_btrack.cpp  test_endianness.cpp  test_factorials.cpp  test_kissfft.cpp  test_move_semantics.cpp  test_portaudio_devs.c  test_rgb_hsv.cpp  utils_tests.h
server/tests/api_handler/: CMakeLists.txt  test_api_handler.cpp
server/tests/fftw/: CMakeLists.txt  test_fftw3.cpp
server/tests/http/: CMakeLists.txt  test_api_gates.cpp  test_mime_types.cpp  test_tls_context.cpp
server/tests/http/fixtures/tls/: README.md  cert.pem  dh_param.pem  key.pem
server/tests/logger/: CMakeLists.txt  test_fmt_log.cpp
server/tests/state_manager/: CMakeLists.txt  test_client_status_json.cpp  test_state_manager.cpp
server/tests/tempo_broadcaster/: CMakeLists.txt  test_tempo_broadcaster.cpp
server/tests/udp/: CMakeLists.txt  test_udp_protocol.cpp  test_udp_request_handler.cpp
server/vcpkg/overlay-triplets/: x64-osx-custom.cmake
server/xcode/: CMakeCache.txt
test-archive/: CMakeLists.txt  restinio.cmake
test-conan/: CMakeLists.txt  Dockerfile  Dockerfile.arm  conanfile.txt  hello_world_minimal.cpp  linux_x64to_arm
test-docker/vanilla/source/: CMakeLists.txt  vcpkg.old.json
(+366 files in other folders)
